k8s/opensearch-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch-server
  template:
    metadata:
      labels:
        app: opensearch-server
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:latest
          volumeMounts:
            - mountPath: /usr/share/opensearch/data
              name: timesketchvolume
          ports:
            - containerPort: 9200
          resources:
            requests:
              cpu: 8000m
              memory: 32Gi
            limits:
              cpu: 12000m
              memory: 64Gi

      volumes:
        - name: timesketchvolume
          persistentVolumeClaim:
            claimName: timesketchvolume-claim
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch-server
  labels:
    app: opensearch-server
spec:
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    app: opensearch-server
