k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: timesketch
      containers:
        - name: postgres
          image: postgres:latest
          volumeMounts:
            - mountPath: /mnt/timesketchvolume/postgresql
              name: timesketchvolume
              subPath: data
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 8000Mi
      volumes:
        - name: timesketchvolume
          persistentVolumeClaim:
            claimName: timesketchvolume-claim
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
