k8s/timesketch-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timesketch-web
  labels:
    app: timesketch-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timesketch-web
  template:
    metadata:
      annotations:
        prometheus.io/port: "9200"
        prometheus.io/scrape: "true"
      labels:
        app: timesketch-web
    spec:
      serviceAccountName: timesketch
      containers:
        - name: timesketch-web
          image: us-docker.pkg.dev/osdfir-registry/timesketch/timesketch:latest
          command: ["sh", "-c", "mkdir /var/log/timesketch && ./docker-entrypoint.sh timesketch-web"]
          #command: ["sh", "-c", "sleep 3600"]
          volumeMounts:
            - mountPath: /mnt/timesketchvolume
              name: timesketchvolume
            - mountPath: /etc/timesketch/
              name: timesketch-conf
            - mountPath: /etc/timesketch/scenarios
              name: scenarios-conf
            - mountPath: /etc/timesketch/sigma/rules
              name: sigma-conf
          ports:
            - containerPort: 5000
          resources: 
            requests:
              cpu: 2000m
              memory: 4000Mi
            limits:
              cpu: 8000m
              memory: 16000Mi
      volumes:
        - name: timesketchvolume
          persistentVolumeClaim:
            claimName: timesketchvolume-claim
            readOnly: false
        - name: timesketch-conf
          configMap:
            name: timesketch-config
        - name: scenarios-conf
          configMap:
            name: scenarios-config
        - name: sigma-conf
          configMap:
            name: sigma-config
---
apiVersion: v1
kind: Service
metadata:
  name: timesketch-web
  labels:
    app: timesketch-web
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"5000":"timesketch-neg-healthcheck"}}'
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: timesketch-web
