k8s/timesketch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timesketch-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "timesketch-webapps"
    networking.gke.io/managed-certificates: timesketch-loadbalancer-managed-ssl
    networking.gke.io/v1beta1.FrontendConfig: timesketch-loadbalancer-frontend-config
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: <DOMAIN_NAME>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timesketch-web
                port:
                  number: 5000
  defaultBackend:
    service:
      name: timesketch-web # Name of the Service targeted by the Ingress
      port:
        number: 5000 # Should match the port used by the Service
